// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax="proto2";
import "brpc/options.proto";

package brpc;

message RpcDumpMeta {
  // baidu_std, hulu_pbrpc
  optional string service_name = 1;

  // baidu_std, sofa_pbrpc(full_method_name)
  optional string method_name = 2;

  // hulu_pbrpc
  optional int32 method_index = 3;

  // baidu_std, hulu_pbrpc, sofa_pbrpc
  optional CompressType compress_type = 4;
  optional ProtocolType protocol_type = 5;

  // baidu_std, hulu_pbrpc
  optional int32 attachment_size = 6;

  // baidu_std
  optional bytes authentication_data = 7;

  // hulu_pbrpc
  optional bytes user_data = 8;
}
